# unsloth

./: .git-blame-ignore-revs  .gitattributes  .gitignore  .pre-commit-ci.yaml  .pre-commit-config.yaml  AGENTS.md  CHANGES.md  CHERRY-PICK-POLICY.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  Dockerfile  EXPORTING_FROM_COLAB.md  I18N_README.md  LICENSE  LLM.md  Llama3_1_(8B)_Alpaca-ASFT.ipynb  Main.java  PARAMETERS.md  PLAN_PR_MUON_UNSLOTH.md  PROJECT_STATUS.md  README.ko.md  README.md  README_amd_radeon.md  TRANSCRIPT.md  Template_Notebook.ipynb  Thanks  UNSLOTH_UPDATE_DETAILS.json  Unsloth_Studio_Colab.ipynb  WORKER_COMPLETE.txt  benchmark_llama1b.py  benchmark_pytorch_vs_mlx.py  benchmark_swiglu.py  build.sh  cli.py  config.yaml  conftest.py  conftest_pr4965.py  dataset_ingestion.py  (+125 more)
.claude/: settings.local.json
.github/: CODEOWNERS  FUNDING.yml  dependabot.yml
.runpod/: Dockerfile  hub.json  requirements.txt  tests.json
.semgrep/: unsloth-rules.yml
activation_logs_demo/: activation_log.jsonl  metadata.json  viz.html
async_task_outputs/: async_task_output_033lqa.md  async_task_output_04oge0.md  async_task_output_07qggq.md  async_task_output_0hcd2s.md  async_task_output_0kxcv4.md  async_task_output_1h8d33.md  async_task_output_1phcfm.md  async_task_output_1rtbzl.md  async_task_output_1ud2z5.md  async_task_output_1vzwo0.md  async_task_output_215bp0.md  async_task_output_283p70.md  async_task_output_2dzmnk.md  async_task_output_2ip7xl.md  async_task_output_2p79oo.md  async_task_output_2r0025.md  async_task_output_31h69u.md  async_task_output_32qisw.md  async_task_output_3aetsv.md  async_task_output_3dot7l.md  async_task_output_3k07zq.md  async_task_output_3sovvl.md  async_task_output_3xv17f.md  async_task_output_4dou64.md  async_task_output_4dyxs8.md  async_task_output_4j03dh.md  async_task_output_4newe2.md  async_task_output_5a3ktf.md  async_task_output_5afl46.md  async_task_output_5etrdc.md  async_task_output_5ih1fr.md  async_task_output_5jnfis.md  async_task_output_63adwt.md  async_task_output_6pwnc4.md  async_task_output_6z1qxq.md  async_task_output_76hycy.md  async_task_output_778ozt.md  async_task_output_7b5f92.md  async_task_output_7mgh4t.md  async_task_output_7ohiaw.md  (+196 more)
backend/: main.py  run.py
benchmarks/: Profiling.MD  README.md  benchmark.py  benchmark_geglu.py  benchmark_lora.py  benchmark_mlp.py  benchmark_mlx_dispatch.py  benchmark_mseries_activations.py  benchmark_rms_layernorm.py  benchmark_rms_metal.py  benchmark_swiglu.py  benchmark_swiglu_metal.py  benchmark_swiglu_vs_mlx.py  mlx_gradient_accumulation_test.py  mlx_gradient_checkpointing_benchmark.py  mlx_model_loading_profile.py  mlx_training_comparison.py  standardized_mlx_benchmark.py  test_swiglu_correctness.py
blackwell/: README.md  blackwell.requirements.txt  test_llama32_sft.py  test_qwen3_grpo.py
cli/: __init__.py  config.py  options.py
docker/: .dockerignore  Dockerfile  (+34 more)
graphify/: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  SECURITY.md  pyproject.toml
graphify/.github/workflows/: ci.yml
graphify/graphify/: __init__.py  __main__.py  analyze.py  benchmark.py  build.py  cache.py  cluster.py  detect.py  export.py  extract.py  hooks.py  ingest.py  manifest.py  report.py  security.py  serve.py  skill-claw.md  skill-codex.md  skill-opencode.md  skill.md  validate.py  watch.py  wiki.py
graphify/tests/: test_analyze.py  test_benchmark.py  test_build.py  test_cache.py  test_claude_md.py  test_cluster.py  test_confidence.py  test_detect.py  test_export.py  test_extract.py  test_hooks.py  test_hypergraph.py  test_ingest.py  test_install.py  test_languages.py  test_multilang.py  test_pipeline.py  test_rationale.py  test_report.py  test_security.py  test_semantic_similarity.py  test_serve.py  test_validate.py  test_watch.py  test_wiki.py
graphify/tests/fixtures/: extraction.json  sample.c  sample.cpp  sample.cs  sample.go  sample.java  sample.kt  sample.md  sample.php  sample.py  sample.rb  sample.rs  sample.scala  sample.ts  sample_calls.py
graphify/worked/example/: README.md
graphify/worked/example/raw/: api.py  architecture.md  notes.md  parser.py  processor.py  storage.py  validator.py
graphify/worked/httpx/: GRAPH_REPORT.md  README.md  graph.json  review.md
graphify/worked/httpx/raw/: auth.py  client.py  exceptions.py  models.py  transport.py  utils.py
graphify/worked/karpathy-repos/: GRAPH_REPORT.md  README.md  graph.json  review.md
graphify/worked/mixed-corpus/: GRAPH_REPORT.md  README.md  graph.json  review.md
graphify/worked/mixed-corpus/raw/: analyze.py  attention_notes.md  build.py  cluster.py
studio/backend/plugins/data-designer-github-repo-seed/: README.md  pyproject.toml
studio/backend/plugins/data-designer-github-repo-seed/src/data_designer_github_repo_seed/: __init__.py  config.py  impl.py  plugin.py  scraper.py
studio/backend/plugins/data-designer-github-repo-seed/src/data_designer_github_repo_seed/scraper_impl/: __init__.py  gh_client.py  queries.py  scraper.py  state_store.py
studio/backend/plugins/data-designer-unstructured-seed/: pyproject.toml
studio/backend/plugins/data-designer-unstructured-seed/src/data_designer_unstructured_seed/: __init__.py  chunking.py  config.py  impl.py  plugin.py
studio/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  TODO.md  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/icons/: icon.icns
studio/src-tauri/linux/: postremove.sh
studio/src-tauri/src/: app_layout.rs  commands.rs  desktop_auth.rs  desktop_backend_owner.rs  desktop_update_policy.rs  install.rs  main.rs  native_backend_lease.rs  native_file_dialogs.rs  native_intents.rs  native_path_policy.rs  preflight.rs  process.rs  studio_root.rs  update.rs  window_state.rs  windows_job.rs
studio/src-tauri/src/diagnostics/: mod.rs  phase_log.rs  redaction.rs  report.rs  state.rs
studio/src-tauri/src/preflight/: backend.rs  managed.rs  types.rs  version.rs
studio/src-tauri/windows/: hooks.nsh  installer.nsi  sign-with-trusted-signing.ps1
(+4174 files in other folders)
